@@ -57,4 +57,5 @@ or the entry about [OC-744] of this current file.
 ====
 Work is still in progress. The object is not usable at the moment.
 ====
-* [OC-878] remove unecessary utilities time classes
+* [OC-878] Remove unecessary utilities time classes
+* [OC-882] Remove unused publishTestData method in cardConsultation service
